tests/baselines/reference/twoInterfacesDifferentRootModule.errors.txt
twoInterfacesDifferentRootModule.ts(3,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
twoInterfacesDifferentRootModule.ts(13,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
twoInterfacesDifferentRootModule.ts(19,16): error TS2339: Property 'foo' does not exist on type 'A'.
twoInterfacesDifferentRootModule.ts(27,16): error TS2339: Property 'foo' does not exist on type 'B<string>'.


==== twoInterfacesDifferentRootModule.ts (4 errors) ====
    // two interfaces with different root modules should not merge
    
    module M {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export interface A {
            foo: string;
        }
    
        export interface B<T> {
            foo: T;
        }
    }
    
    module M2 {
           ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export interface A {
            bar: number;
        }
    
        var a: A;
        var r1 = a.foo; // error
                   ~~~
!!! error TS2339: Property 'foo' does not exist on type 'A'.
        var r2 = a.bar; 
    
        export interface B<T> {
            bar: T;
        }
    
        var b: B<string>;
        var r3 = b.foo; // error
                   ~~~
!!! error TS2339: Property 'foo' does not exist on type 'B<string>'.
        var r4 = b.bar; 
    }